# Cellular-Automaton-s-Joelton-D.-Junior

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/classes/: Space.cpp  Space.hpp
